--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio - Contact</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -41,7 +42,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 Your Portfolio</p>
+        <p>&copy; 2023 My Portfolio</p>
     </footer><br>
     <a href="#top">Back to top of page</a> <br><br>
 </body>
