--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio - Work</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -23,10 +24,10 @@
         <h2>Work</h2>
         <p>This is the Work page of my portfolio website.</p>
     </section><br><br>
-    <img src="https://images.pexels.com/photos/3018073/pexels-photo-3018073.jpeg?auto=compress&cs=tinysrgb&w=600" alt=""><br><br>
+    <img src="https://images.pexels.com/photos/3018073/pexels-photo-3018073.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width=600 width=600><br><br>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus iste magni ullam eaque nesciunt ad. Repellat eaque provident dolorum id quis optio tempore? Amet natus ea sed reiciendis eos omnis culpa nam soluta. In obcaecati libero quasi iure pariatur voluptas dolorem repellendus deleniti nulla, autem adipisci magni amet officiis laborum soluta aperiam earum vero magnam, harum molestiae, fuga provident quis consequuntur expedita! Nesciunt unde omnis voluptatibus quaerat fugit facere soluta tenetur quisquam, eos perferendis odio tempore, qui beatae assumenda sapiente inventore. Ex dolorem cumque dignissimos iusto, molestias, sequi tempora reprehenderit laborum saepe expedita doloremque quos minima eaque. Mollitia, quia accusamus. <br> <br>
 
-    <img src="https://images.pexels.com/photos/1408221/pexels-photo-1408221.jpeg?auto=compress&cs=tinysrgb&w=600" alt=""><br><br>
+    <img src="https://images.pexels.com/photos/1408221/pexels-photo-1408221.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width=600 height=600><br><br>
 
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sit ea impedit! At sequi laudantium, laborum reiciendis atque, incidunt possimus debitis facilis exercitationem assumenda quas. Laborum enim corrupti voluptatum exercitationem minus, numquam ut accusamus, nostrum reiciendis, voluptate impedit illum in repellendus sint incidunt. Cumque tenetur assumenda natus cupiditate eius. Ullam? <br><br>
 
